--- a/src/app/main/unit/unit.component.html
+++ b/src/app/main/unit/unit.component.html
@@ -15,13 +15,25 @@
     <div class="col-md-6 btn_search">
       <button *ngIf="isQLTC_03" class="btn btn-lg btn-block btn_submit" (click)="searchUnit()">{{'btn.search' | translate }}</button>
       <button *ngIf="isQLTC_01" class="btn btn-lg btn-block btn_submit" (click)="addUnit()">{{'btn.add' | translate }}</button>
-      <input *ngIf="isQLTC_01" id="file-input" type="file" accept=".xls,.xlsx" (change)="fileChanged($event)"/>
-
-      {{'not.have.sample.file' | translate}} <a href="/assets/upload/import_to_chuc.xlsx" style="color: #106DB6; cursor: pointer;" (click)="downFileExample()">{{'download.sample.file' | translate}}</a>
     </div>
   </div>
 
-  <div class="row" style="padding-top: 20px;">
+  <div class="row" style="padding-top: 5px;">
+    <div class="col-md-6">
+    </div>
+    <div class="col-md-6 btn_search" style="padding-left: 22px">
+      <input *ngIf="isQLTC_01" id="file-input" type="file" accept=".xls,.xlsx" (change)="fileChanged($event)" style="display: none"/>
+      <label for="file-input" class="custom-file-upload">
+        <i class="fa fa-cloud-upload"></i> Import file
+      </label>
+
+      <a style="padding-left: 5px;">
+        {{'not.have.sample.file' | translate}} <a href="/assets/upload/import_to_chuc.xlsx" style="color: #106DB6; cursor: pointer;" (click)="downFileExample()">{{'download.sample.file' | translate}}</a>
+      </a>
+    </div>
+  </div>
+
+  <div class="row" style="padding-top: 15px;">
     <p-treeTable [value]="list" id="table" [autoLayout]="true">
       <ng-template pTemplate="header" let-columns>
       <tr> 
