--- a/src/app/main/user/user.component.html
+++ b/src/app/main/user/user.component.html
@@ -16,9 +16,21 @@
     <div class="col-md-6 btn_search">
       <button *ngIf="isQLND_03" class="btn btn-lg btn-block btn_submit" (click)="searchUser()">{{'btn.search' | translate }}</button>
       <button *ngIf="isQLND_01" class="btn btn-lg btn-block btn_submit" (click)="addUser()">{{'btn.add' | translate }}</button>
-      <input *ngIf="isQLND_01" id="file-input" type="file" accept=".xls,.xlsx" (change)="fileChanged($event)"/>
+    </div>
+  </div>
 
-      {{'not.have.sample.file' | translate}} <a href="/assets/upload/import_nguoi_dung.xlsx" style="color: #106DB6; cursor: pointer;" (click)="downFileExample()">{{'download.sample.file' | translate}}</a>
+  <div class="row" style="padding-top: 5px;">
+    <div class="col-md-6">
+    </div>
+    <div class="col-md-6 btn_search" style="padding-left: 22px">
+      <input *ngIf="isQLND_01" id="file-input" type="file" accept=".xls,.xlsx" (change)="fileChanged($event)" style="display: none"/>
+      <label for="file-input" class="custom-file-upload">
+        <i class="fa fa-cloud-upload"></i> Import file
+      </label>
+
+      <a style="padding-left: 5px;">
+        {{'not.have.sample.file' | translate}} <a href="/assets/upload/import_nguoi_dung.xlsx" style="color: #106DB6; cursor: pointer;" (click)="downFileExample()">{{'download.sample.file' | translate}}</a>
+      </a>
     </div>
   </div>
 
