--- a/src/app/main/user/user.component.scss
+++ b/src/app/main/user/user.component.scss
@@ -8,6 +8,21 @@
   font-size: 13px;
   margin: 0 10px;
 }
+
+input[type="file"] {
+  display: none;
+}
+.custom-file-upload {
+  color: white;
+  border: 0px;
+  border-radius: 5px;
+  box-sizing: border-box;
+  background-color: #106DB6;
+  display: inline-block;
+  padding: 6px 12px;
+  cursor: pointer;
+}
+
 .input_text {
   padding-left: 10px;
   outline: none;
