--- a/src/app/main/contract/form-contract/party-contract-form/party-contract-form.component.html
+++ b/src/app/main/contract/form-contract/party-contract-form/party-contract-form.component.html
@@ -1499,7 +1499,7 @@
                 </div>
 
                 <div class="participants__name">
-                  <div class="label_detail text-color">{{'user.phone' | translate}}&nbsp;<div style="color: #ffc107;">({{'receive.contract.process' | translate}})</div></div>
+                  <div class="label_detail text-color">{{'user.phone' | translate}}&nbsp;<span *ngIf="getDataSignCka(d).length > 0" class="required-title">*</span><div style="color: #ffc107;">({{'receive.contract.process' | translate}})</div></div>
                   <div class="input-data">
                     <img src="assets/img/login_email.svg" class="input-img">
                     <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.phone">
@@ -1519,7 +1519,7 @@
               </div>
 
 
-                <div class="participants--input">
+                <!-- <div class="participants--input">
                 <div *ngIf="getDataSignCka(d).length > 0" class="participants__name" style="width: 90%">
                   <div class="label_detail text-color">
                     {{'user.phone' | translate}}&nbsp;<span
@@ -1537,7 +1537,7 @@
                     />
                   </div>
                 </div>
-                </div>
+                </div> -->
 
                 <div
                   class="participants--input"
