--- a/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
@@ -999,7 +999,7 @@
                 </div>
 
                 <div class="participants__name">
-                  <div class="label_detail text-color">{{'user.phone' | translate}}&nbsp;<div style="color: #ffc107;">({{'receive.contract.process' | translate}})</div></div>
+                  <div class="label_detail text-color">{{'user.phone' | translate}}&nbsp;<span *ngIf="getDataSignCka(d).length > 0" class="required-title">*</span><div style="color: #ffc107;">({{'receive.contract.process' | translate}})</div></div>
                   <div class="input-data">
                     <img src="assets/img/login_email.svg" class="input-img">
                     <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.phone">
@@ -1018,7 +1018,7 @@
                 </div>
               </div>
 
-                <div class="participants--input" style="display: flex">
+                <!-- <div class="participants--input" style="display: flex">
                   <div *ngIf="d.login_by === 'email' && getDataSignCka(d).length > 0" class="participants__name" style="width:90%">
                     <div class="label_detail text-color">{{'user.phone' | translate}}&nbsp;<span class="required-title">*</span></div>
                     <div class="input-data">
@@ -1026,7 +1026,7 @@
                       <input type="text" placeholder="nhap_sdt" [(ngModel)]="d.phone">
                     </div>
                   </div>
-                </div>
+                </div> -->
 
                 <!--trường hiển thị khi đối tác là cá nhân chọn loại ký là eKYC-->
                 <div class="participants--input" style="display: flex" *ngIf="getDataSignEkyc(d).length > 0">
