--- a/src/app/main/contract-signature/components/consider-contract/consider-contract.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/consider-contract.component.html
@@ -84,11 +84,13 @@
           </div>
         </div>
 
+        <button (click)="test()">Auto scroll</button>
+
       </div>
     </div>
   </div>
 
-  <div class="col-md-9 sample-contract__file viewer-pdf isDrag"
+  <div id="pdf-full" class="col-md-9 sample-contract__file viewer-pdf isDrag"
        style="background-color: #F2F2F2; position: relative">
     <div id="pdf-viewer-step-3">
       <div *ngFor="let d of this.convertToSignConfig()" class="show-list-name-drag" [style.width]="this.canvasWidth">
