--- a/src/app/main/contract-template/shared/model/infor-contract/infor-contract.component.html
+++ b/src/app/main/contract-template/shared/model/infor-contract/infor-contract.component.html
@@ -94,33 +94,34 @@
 
     <div class="col-md-5">
       <div class="row">
-      <div class="col-md-6">
-        <div class="form-group">
-          <div class="label_item">{{'effective-start-date' | translate}} <span class="require_star">*</span></div>
-          <div>
-            <p-calendar [(ngModel)]="start_time" [disabled]="false" [showIcon]="true" [readonlyInput]="false" dateFormat="dd/mm/yy" (onSelect)="startTimeRequired();"></p-calendar>
+        <div class="col-md-6">
+          <div class="form-group">
+            <div class="label_item">{{'effective-start-date' | translate}} <span class="require_star">*</span></div>
+            <div>
+              <p-calendar *ngIf="this.templateIsUse" [(ngModel)]="start_time" [disabled]="true" [showIcon]="true" [readonlyInput]="true" dateFormat="dd/mm/yy" (onSelect)="startTimeRequired();"></p-calendar>
+              <p-calendar *ngIf="!this.templateIsUse" [(ngModel)]="start_time" [disabled]="false" [showIcon]="true" [readonlyInput]="false" dateFormat="dd/mm/yy" (onSelect)="startTimeRequired();"></p-calendar>
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="invalid" *ngIf="errorStartTime!=''">
+              {{errorStartTime | translate}}
+            </div>
           </div>
         </div>
-        <div class="form-group">
-          <div class="invalid" *ngIf="errorStartTime!=''">
-            {{errorStartTime | translate}}
-          </div>
-        </div>
-      </div>
 
-      <div class="col-md-6">
-        <div class="form-group">
-          <div class="label_item">{{'effective-end-date' | translate}} <span class="require_star">*</span></div>
-          <div>
-            <p-calendar [(ngModel)]="end_time" [minDate]="minDate" [showIcon]="true" [readonlyInput]="true" dateFormat="dd/mm/yy" (onSelect)="endTimeValid();"></p-calendar>
+        <div class="col-md-6">
+          <div class="form-group">
+            <div class="label_item">{{'effective-end-date' | translate}} <span class="require_star">*</span></div>
+            <div>
+              <p-calendar [(ngModel)]="end_time" [minDate]="minDate" [showIcon]="true" [readonlyInput]="true" dateFormat="dd/mm/yy" (onSelect)="endTimeValid();"></p-calendar>
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="invalid" *ngIf="errorEndTime!=''">
+              {{errorEndTime | translate}}
+            </div>
           </div>
         </div>
-        <div class="form-group">
-          <div class="invalid" *ngIf="errorEndTime!=''">
-            {{errorEndTime | translate}}
-          </div>
-        </div>
-      </div>
     </div>
   </div>
 </div>
