responsive mh PC to chuc & nguoi dung, mh xem xet, ky, dong dau hop dong

--- a/src/app/main/contract-signature/components/consider-contract/consider-contract.component.scss
+++ b/src/app/main/contract-signature/components/consider-contract/consider-contract.component.scss
@@ -186,6 +186,10 @@
     font-weight: normal;
     color: #F48465;
   }
+
+  .radio-confirm{
+    margin-left: -10px;
+  }
 }
 
 // test
@@ -303,3 +307,23 @@
   height: 85px !important;
 }
 
+@media screen and (min-width: 1224px) and (max-width:1280px){
+  .sample-contract{
+  .label {
+    font-size: 13px;
+  }
+  .radio-confirm{
+    margin-left: -10px;
+  }
+}
+}
+@media screen and (min-width: 1280px) and (max-width:1400px){
+  .sample-contract{
+  .label {
+    font-size: 13px;
+  }
+  .radio-confirm{
+    margin-left: -10px;
+  }
+}
+}
