--- a/src/app/main/user/user.component.html
+++ b/src/app/main/user/user.component.html
@@ -24,8 +24,8 @@
     </div>
     <div class="col-md-6 btn_search" style="padding-left: 22px">
       <input *ngIf="isQLND_01" id="file-input" type="file" accept=".xls,.xlsx" (change)="fileChanged($event)" style="display: none"/>
-      <label for="file-input" class="custom-file-upload" style="margin-left: 55%">
-        <i class="fa fa-cloud-upload"></i> Import file
+      <label for="file-input" class="custom-file-upload">
+        <i class="fa fa-cloud-upload"></i> Import filed
       </label>
 
       <a style="padding-left: 5px;">
