--- a/src/app/main/contract-signature/components/consider-contract/consider-contract.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/consider-contract.component.html
@@ -85,11 +85,14 @@
             </div>
           </div>
         </div>
-
-        <button (click)="test()">Auto scroll</button>
-
       </div>
+      
+      
     </div>
+
+      <div style="padding-top: 10px;padding-left: 318px">
+        <span class="auto-scroll" (click)="test()">Auto scroll</span>
+      </div>
   </div>
 
   <div id="pdf-full" class="col-md-9 sample-contract__file viewer-pdf isDrag"
