--- a/src/app/main/contract-signature/components/consider-contract/consider-contract.component.scss
+++ b/src/app/main/contract-signature/components/consider-contract/consider-contract.component.scss
@@ -303,3 +303,15 @@
   height: 85px !important;
 }
 
+.auto-scroll {
+  width: 100px;
+  height: 30px;
+  border-bottom-left-radius: 8px;
+  border-top-left-radius: 8px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  background: rgb(46, 108, 246); 
+  color: rgb(255, 255, 255);
+}
