--- a/src/app/main/contract-signature/components/consider-contract/consider-contract.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/consider-contract.component.html
@@ -91,7 +91,7 @@
     </div>
 
       <div style="padding-top: 10px;padding-left: 318px">
-        <span class="auto-scroll" (click)="test()">Auto scroll</span>
+        <span class="auto-scroll" (click)="autoScroll()">Auto scroll</span>
       </div>
   </div>
 
