--- a/src/app/main/contract/detail-contract/detail-contract.component.scss
+++ b/src/app/main/contract/detail-contract/detail-contract.component.scss
@@ -294,6 +294,18 @@
   margin: 5px 5px;
 }
 
+.action-button1 {
+  width: 180px;
+  height: 30px;
+  background: #106DB6;
+  //font-weight: bold;
+  color: white;
+  border: 0 none;
+  border-radius: 7px;
+  cursor: pointer;
+  margin: 5px 5px;
+}
+
 .footer-contract {
   border-top: 1px solid #ddd;
   display: flex;
