--- a/src/app/main/contract-signature/shared/model/processing-handle-econtract/processing-handle-econtract.component.html
+++ b/src/app/main/contract-signature/shared/model/processing-handle-econtract/processing-handle-econtract.component.html
@@ -12,15 +12,19 @@
             </div>
         </div>
         <div *ngFor="let d of is_list_name">
-            <div style="display: flex; justify-content: space-between; text-align: left; margin-bottom: 10px">
+            <div *ngIf = "!this.reasonCancel" style="display: flex; justify-content: space-between; text-align: left; margin-bottom: 10px">
+
                 <div class="col-md-7" style="display: flex; flex-direction: column;text-align: left;">
                     <div style="display: flex;">
+
+                    <!--Tên người trong luồng hợp đồng-->
                     <span>{{d.name}}</span>&nbsp;
                     <span style="color: #8B8B8B" *ngIf="d.emailRecipients">({{d.emailRecipients}})</span>
                     </div>
                     <span style="color: #8B8B8B" *ngIf="d.type != 3 && d.name_company">{{d.name_company}}</span>
                     <span style="color: dimgray" *ngIf="d.typeOfSign">Loại ký: {{d.typeOfSign.name ? d.typeOfSign.name : ''}}</span>
                 </div>
+
                 <div class="col-md-5" style="display: flex; flex-direction: column;text-align: center">
                     <div style="display: flex; justify-content: center;align-items: center;">
                         <span [style.color]="d.status === 'Đã từ chối' ? '#d11919' : d.status !== 0 ? '#106DB6' : '#545252'">{{d.status}}</span> &nbsp;
@@ -30,6 +34,41 @@
                     </div> 
                     <span style="color: #8B8B8B" *ngIf="d.process_at">({{d.process_at}})</span>
                 </div>
+            </div>
+
+            <div *ngIf = "this.reasonCancel && d.statusNumber == 2 || d.statusNumber == 3 || d.statusNumber == 4" style="display: flex; justify-content: space-between; text-align: left; margin-bottom: 10px">
+
+                <div class="col-md-7" style="display: flex; flex-direction: column;text-align: left;">
+                    <div style="display: flex;">
+
+                    <!--Tên người trong luồng hợp đồng-->
+                    <span>{{d.name}}</span>&nbsp;
+                    <span style="color: #8B8B8B" *ngIf="d.emailRecipients">({{d.emailRecipients}})</span>
+                    </div>
+                    <span style="color: #8B8B8B" *ngIf="d.type != 3 && d.name_company">{{d.name_company}}</span>
+                    <span style="color: dimgray" *ngIf="d.typeOfSign">Loại ký: {{d.typeOfSign.name ? d.typeOfSign.name : ''}}</span>
+                </div>
+
+                <div class="col-md-5" style="display: flex; flex-direction: column;text-align: center">
+                    <div style="display: flex; justify-content: center;align-items: center;">
+                        <span [style.color]="d.status === 'Đã từ chối' ? '#d11919' : d.status !== 0 ? '#106DB6' : '#545252'">{{d.status}}</span> &nbsp;
+                        <div class="div_icon " style="width: 90px;display: flex;margin-left:10px"  *ngIf="d.status == 'Đã từ chối'" >
+                            <div class="img_icon button" ngbTooltip="Lý do từ chối hợp đồng" (click)="viewReasonRejected(d.id)">Xem lý do</div>
+                        </div>
+                    </div> 
+                    <span style="color: #8B8B8B" *ngIf="d.process_at">({{d.process_at}})</span>
+                </div>
+            </div>
+        </div>
+
+        <div style="display: flex; justify-content: space-between; text-align: left; margin-bottom: 10px">
+            <div class="col-md-7" style="flex-direction: column;text-align: left;">
+                <span>{{this.personCreate}}</span>&nbsp;
+                <span style="color: #8B8B8B">({{this.emailCreate}})</span>
+            </div>
+            <div class="col-md-5" style="display: flex; flex-direction: column;text-align: center">
+                <span style="color: '#106DB6'">Người huỷ bỏ</span>
+                <span style="color: #8B8B8B">({{this.cancelDate}})</span>
             </div>
         </div>
     </div>
