--- a/src/app/main/contract-signature/components/consider-contract/consider-contract.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/consider-contract.component.html
@@ -90,7 +90,12 @@
       
     </div>
 
-      <div style="padding-top: 10px;padding-left: 315px">
+      <!--380-->
+      <div *ngIf="this.loginType == 0" style="padding-top: 10px;padding-left: 315px">
+        <span class="auto-scroll" (click)="autoScroll()">Auto scroll</span>
+      </div>
+
+      <div *ngIf="this.loginType == 1" style="padding-top: 10px;padding-left: 380px">
         <span class="auto-scroll" (click)="autoScroll()">Auto scroll</span>
       </div>
   </div>
