--- a/src/app/main/contract-template/shared/model/sample-contract/sample-contract.component.scss
+++ b/src/app/main/contract-template/shared/model/sample-contract/sample-contract.component.scss
@@ -24,7 +24,7 @@
         overflow-x: hidden;
     }
     .viewer-pdf.isDrag {
-        height: calc(100vh - 246px);
+        height: calc(100vh - 287px);
         overflow-x: auto;
         text-align: center;
         background-color: rgba(239, 239, 239, 1);
@@ -52,8 +52,23 @@
                 text-align: center;
                 display: flex;
                 justify-content: center;
-                align-items: center
+                align-items: center;
+                flex-direction: column
             }
+            .content-drag1 {
+                //cursor: pointer;
+                width: 100%;
+                height: 30px;
+                background-color: #EBF8FF;
+                border-radius: 5px;
+                border: 1px solid #106DB6;
+                color: #106DB6;
+                text-align: center;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                flex-direction: column;
+              }
             .show-list-name-class:nth-last-child(4) {
                 //float: left;
                 margin-right: 11px;
@@ -102,7 +117,7 @@
         .flex-column {
             .location {
                 display: flex;
-                justify-content: space-around
+                justify-content: space-around;
             }
             .location-drag {
                 //display: flex;
@@ -234,11 +249,11 @@
     padding-left: 7px;
 }
 
-#element-drag-text,
-#element-drag {
-    //display: inline-block;
-    //width: ;
-}
+// #element-drag-text,
+// #element-drag {
+//     //display: inline-block;
+//     //width: ;
+// }
 
 //style button
 .action-button {
@@ -276,3 +291,361 @@
         font-weight: 500;
     }
 }
+@media screen and (min-width:1224px) and (max-width:1280px){
+    .sample-contract{
+        height: calc(100vh - 260px);
+        .label{
+          font-size: 14px;
+        }
+        .viewer-pdf.isDrag{
+          background-color: #f3f7f9; 
+          position: relative;
+        }
+        &__information{
+            &--drag {
+                .content-drag {
+                    //cursor: pointer;
+                    width: 100%;
+                    height: 30px;
+                    background-color: #EBF8FF;
+                    border-radius: 5px;
+                    border: 1px solid #106DB6;
+                    color: #106DB6;
+                    text-align: center;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    flex-direction: row;
+                }
+                .content-drag span{
+                    width: 50px;
+                    margin-left: 5px;
+                }
+                .content-drag1 {
+                    width: 100%;
+                    height: 30px;
+                    background-color: #EBF8FF;
+                    border-radius: 5px;
+                    border: 1px solid #106DB6;
+                    color: #106DB6;
+                    text-align: center;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    flex-direction: row;
+                }
+                .content-drag1 span{
+                    width: 50px;            
+                }
+            }
+            .flex-column{
+                .location {
+                    display: flex;
+                    justify-content: space-around;
+                }
+                .location-drag{
+                    float: left;
+                    align-items: center;
+
+                    div {
+                        width: 48px;
+                        color: #666666;
+                        text-align: center;
+                        float: left;
+                        padding-right: 15px;
+                        padding-top: 0px;
+                    }
+
+                    input {
+                        width: 55px;
+                        height: 35px;
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media screen and (min-width:1280px) and (max-width:1440px){
+    .sample-contract{
+        height: calc(100vh - 260px);
+        .label{
+          font-size: 14px;
+        }
+        .viewer-pdf.isDrag{
+          background-color: #f3f7f9; 
+          position: relative;
+        }
+        &__information{
+            &--drag {
+                .content-drag {
+                    //cursor: pointer;
+                    width: 100%;
+                    height: 30px;
+                    background-color: #EBF8FF;
+                    border-radius: 5px;
+                    border: 1px solid #106DB6;
+                    color: #106DB6;
+                    text-align: center;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    flex-direction: row;
+                }
+                .content-drag span{
+                    width: 50px;
+                    margin-left: 5px;
+                }
+                .content-drag1 {
+                    width: 100%;
+                    height: 30px;
+                    background-color: #EBF8FF;
+                    border-radius: 5px;
+                    border: 1px solid #106DB6;
+                    color: #106DB6;
+                    text-align: center;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    flex-direction: row;
+                }
+                .content-drag1 span{
+                    width: 50px;            
+                }
+            }
+            .flex-column{
+                .location {
+                    display: flex;
+                    justify-content: space-around;
+                }
+                .location-drag{
+                    float: left;
+                    align-items: center;
+
+                    div {
+                        width: 48px;
+                        color: #666666;
+                        text-align: center;
+                        float: left;
+                        padding-right: 15px;
+                        padding-top: 0px;
+                    }
+
+                    input {
+                        width: 55px;
+                        height: 35px;
+                    }
+                }
+            }
+        }
+    }
+}
+
+
+
+@media screen and (min-width:1440px) and (max-width:1600px) {
+    .sample-contract{
+      height: calc(100vh - 260px);
+      &__information{
+        &--drag{
+          .content-drag {
+            //cursor: pointer;
+            width: 100%;
+            height: 30px;
+            background-color: #EBF8FF;
+            border-radius: 5px;
+            border: 1px solid #106DB6;
+            color: #106DB6;
+            text-align: center;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: row;
+          }
+          .content-drag span{
+            width: 50px;
+            margin-left: 5px;
+          }
+          .content-drag1 {
+            //cursor: pointer;
+            width: 100%;
+            height: 30px;
+            background-color: #EBF8FF;
+            border-radius: 5px;
+            border: 1px solid #106DB6;
+            color: #106DB6;
+            text-align: center;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: row;
+          }
+          .content-drag1 span{
+            width: 50px;            
+          }
+        }
+        .flex-column{
+          .location {
+            display: flex;
+            justify-content: space-around;
+          }
+          .location-drag{
+            float: left;
+            align-items: center;
+  
+            div {
+              width: 45px;
+              color: #666666;
+              text-align: center;
+              float: left;
+              padding-right: 15px;
+              padding-top: 10px;
+            }
+      
+            input {
+              width: 70px;
+              height: 40px;
+            }
+          }
+        }
+      }
+    }
+}
+
+@media screen and (min-width:1600px) and (max-width:1824px) {
+    .sample-contract{
+      height: calc(100vh - 260px);
+      &__information{
+        &--drag{
+          .content-drag {
+            //cursor: pointer;
+            width: 100%;
+            height: 30px;
+            background-color: #EBF8FF;
+            border-radius: 5px;
+            border: 1px solid #106DB6;
+            color: #106DB6;
+            text-align: center;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: row;
+          }
+          .content-drag span{
+            width: 50px;
+            margin-left: 5px;
+          }
+          .content-drag1 {
+            //cursor: pointer;
+            width: 100%;
+            height: 30px;
+            background-color: #EBF8FF;
+            border-radius: 5px;
+            border: 1px solid #106DB6;
+            color: #106DB6;
+            text-align: center;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: row;
+          }
+          .content-drag1 span{
+            width: 50px;            
+          }
+        }
+        .flex-column{
+          .location {
+            display: flex;
+            justify-content: space-around;
+          }
+          .location-drag{
+            float: left;
+            align-items: center;
+  
+            div {
+              width: 55px;
+              color: #666666;
+              text-align: center;
+              float: left;
+              padding-right: 15px;
+              padding-top: 10px;
+            }
+      
+            input {
+              width: 80px;
+              height: 40px;
+            }
+          }
+        }
+      }
+    }
+}
+
+// @media screen and (min-width:1824px) {
+//     .sample-contract{
+//         height: calc(100vh - 260px);
+//         &__information{
+//           &--drag{
+//             .content-drag {
+//               //cursor: pointer;
+//               width: 100%;
+//               height: 30px;
+//               background-color: #EBF8FF;
+//               border-radius: 5px;
+//               border: 1px solid #106DB6;
+//               color: #106DB6;
+//               text-align: center;
+//               display: flex;
+//               justify-content: center;
+//               align-items: center;
+//               flex-direction: column;
+//             }
+//             .content-drag span{
+//               width: 50px;
+//               margin-left: 5px;
+//             }
+//             .content-drag1 {
+//               //cursor: pointer;
+//               width: 100%;
+//               height: 30px;
+//               background-color: #EBF8FF;
+//               border-radius: 5px;
+//               border: 1px solid #106DB6;
+//               color: #106DB6;
+//               text-align: center;
+//               display: flex;
+//               justify-content: center;
+//               align-items: center;
+//               flex-direction: column;
+//             }
+//             .content-drag1 span{
+//               width: 50px;            
+//             }
+//           }
+//           .flex-column{
+//             .location {
+//               display: flex;
+//               justify-content: space-around;
+//             }
+//             .location-drag{
+//               float: left;
+//               align-items: center;
+    
+//               div {
+//                 width: 55px;
+//                 color: #666666;
+//                 text-align: center;
+//                 float: left;
+//                 padding-right: 15px;
+//                 padding-top: 10px;
+//               }
+        
+//               input {
+//                 width: 88px;
+//                 height: 40px;
+//               }
+//             }
+//           }
+//         }
+//       }
+// }
