--- a/src/app/main/contract-template/contract-template.component.html
+++ b/src/app/main/contract-template/contract-template.component.html
@@ -25,7 +25,7 @@
           [filter]="true" 
           filterBy="name" 
           [showClear]="type?true:false"
-          placeholder="Tất cả"
+          placeholder="{{'all' | translate}}"
           ></p-dropdown>
       </div>
     </div>
