--- a/src/app/main/unit/unit.component.html
+++ b/src/app/main/unit/unit.component.html
@@ -18,7 +18,7 @@
     </div>
   </div>
 
-  <div class="row" style="padding-top: 5px;">
+  <!-- <div class="row" style="padding-top: 5px;">
     <div class="col-md-6">
     </div>
     <div class="col-md-6 btn_search" style="padding-left: 22px">
@@ -31,7 +31,7 @@
         {{'not.have.sample.file' | translate}} <a href="/assets/upload/import_to_chuc.xlsx" style="color: #106DB6; cursor: pointer;" (click)="downFileExample()">{{'download.sample.file' | translate}}</a>
       </a>
     </div>
-  </div>
+  </div> -->
 
 
   <div class="row" style="padding-top: 15px;">
