--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -19,7 +19,8 @@
             <div class="title_notification">{{'no.list' | translate}}</div>
             <div class="drop_notification" *ngFor="let item of listNotification; let i = index" (click)="openLinkNotification(item.notice_url, item.id)" [style.background-color]="item.status==0 ? '#eaf4ff' : ''">
               <div class="row">
-                  <div class="col-md-12 item_contract_name">{{item.notice_name}}</div>
+                  <div *ngIf="this.lang == 'vi'" class="col-md-12 item_contract_name">{{item.notice_name}}</div>
+                  <div *ngIf="this.lang == 'en'" class="col-md-12 item_contract_name">{{item.notice_name.replace("Ký HĐ","Sign contract").replace("Quá hạn","Overdue").replace("Hoàn thành","Completed")}}</div>
               </div>
               <div class="row" *ngFor="let s of item.notice_content.split('<br/>')">
                 <div class="col-md-12 item_contract_infor">
