--- a/src/app/main/notification/notification.component.html
+++ b/src/app/main/notification/notification.component.html
@@ -4,7 +4,8 @@
         <div *ngFor="let item of listNotification| paginate:{itemsPerPage: page, currentPage:p, totalItems: pageTotal}" style="padding: 4px;"
         [style.background-color]="item.status==0 ? '#eaf4ff' : ''" class="item_contract">
           <div class="row">
-            <div class="col-md-12 item_contract_name" (click)="openLinkNotification(item.notice_url, item.id)">{{item.notice_name}}</div>
+            <div *ngIf="this.lang == 'vi'" class="col-md-12 item_contract_name" (click)="openLinkNotification(item.notice_url, item.id)">{{item.notice_name}}</div>
+            <div *ngIf="this.lang == 'en'" class="col-md-12 item_contract_name" (click)="openLinkNotification(item.notice_url, item.id)">{{item.notice_name.replace("Ký HĐ","Sign contract").replace("Quá hạn","Overdue").replace("Hoàn thành","Completed")}}</div>
           </div>
           <div class="row" *ngFor="let s of item.notice_content.split('<br/>')">
             <div class="col-md-12 item_contract_infor">
